--- a/src/css/tools/_mixins.scss
+++ b/src/css/tools/_mixins.scss
@@ -33,17 +33,17 @@ $medium-screen          : em($medium-screen, 16px);
 $large-screen           : em($large-screen, 16px);
 
 // mixin vertical rhythm
-@mixin vertical-rhythm($font-size, $vertical-rhythm: $base-font-size * $line-height) {
+@mixin vertical-rhythm($font-size, $vertical-rhythm: $base-font-size * $line-height, $minor: true) {
     $font-size: rem($font-size);
     font-size: $font-size;
-    line-height: line-height($font-size, $vertical-rhythm);
+    line-height: line-height($font-size, $vertical-rhythm, $minor);
 }
 
 // mixin field rhythm
-@mixin field-rhythm($font-size, $height: $field-height, $padding-x: $small-value) {
+@mixin field-rhythm($font-size, $height: $field-height, $padding-x: $small-value, $minor: true) {
     $font-size: rem($font-size);
     $height: rem($height);
-    $padding-y: em(($height - line-height($font-size) * $font-size) / 2, $font-size);
+    $padding-y: em(($height - line-height($font-size, $minor: $minor) * $font-size) / 2, $font-size);
     $padding-x: em($padding-x, $font-size);
     @if $padding-y < 0 {
         padding: 0 $padding-x;
